--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,9 @@ const { title, noTopPadding = false } = Astro.props;
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
         <meta name="generator" content={Astro.generator} />
+        <meta name="description" content="Moderní webová řešení pro váš business. Tvoříme weby, které prodávají." />
+        <meta name="keywords" content="DigitalFusion, Digital Fusion, digital, fusion, web development, web design, webové stránky, digitální marketing, branding" />
+        <meta name="author" content="DigitalFusion" />
         <title>{title}</title>
         <ViewTransitions />
     </head>
